[package]
name = "bevy_anti_aliasing"
version = "0.15.0"
edition = "2024"
description = "Provides various anti aliasing implementations for Bevy Engine"
homepage = "https://bevyengine.org"
repository = "https://github.com/bevyengine/bevy"
license = "MIT OR Apache-2.0"
keywords = ["bevy"]

[features]
trace = []
webgl = []
webgpu = []
smaa_luts = ["bevy_render/ktx2", "bevy_image/ktx2", "bevy_image/zstd"]

[dependencies]
# bevy
bevy_asset = { path = "../bevy_asset", version = "0.15.0" }
bevy_reflect = { path = "../bevy_reflect", version = "0.15.0" }
bevy_render = { path = "../bevy_render", version = "0.15.0" }
bevy_math = { path = "../bevy_math", version = "0.15.0" }
bevy_utils = { path = "../bevy_utils", version = "0.15.0" }
bevy_app = { path = "../bevy_app", version = "0.15.0" }
bevy_image = { path = "../bevy_image", version = "0.15.0" }
bevy_derive = { path = "../bevy_derive", version = "0.15.0" }
bevy_ecs = { path = "../bevy_ecs", version = "0.15.0" }
bevy_core_pipeline = { path = "../bevy_core_pipeline", version = "0.15.0" }
bevy_diagnostic = { path = "../bevy_diagnostic", version = "0.15.0" }

# other
tracing = { version = "0.1", default-features = false, features = ["std"] }

[lints]
workspace = true

[package.metadata.docs.rs]
rustdoc-args = ["-Zunstable-options", "--generate-link-to-definition"]
all-features = true
